RESOLVED FIXED258133
Crash in RemoteLayerTreeEventDispatcherDisplayLinkClient teardown
https://bugs.webkit.org/show_bug.cgi?id=258133
Summary Crash in RemoteLayerTreeEventDispatcherDisplayLinkClient teardown
Vitor Roriz
Reported 2023-06-15 07:49:05 PDT
We still have some crashes when deleting RemoteLayerTreeEventDispatcherDisplayLinkClient
Attachments
Vitor Roriz
Comment 1 2023-06-19 11:02:59 PDT
Vitor Roriz
Comment 2 2023-06-19 11:04:10 PDT
EWS
Comment 3 2023-06-20 09:16:33 PDT
Committed 265322@main (7badad9c6f47): <https://commits.webkit.org/265322@main> Reviewed commits have been landed. Closing PR #15096 and removing active labels.
WebKit Commit Bot
Comment 4 2023-06-20 15:27:44 PDT
Re-opened since this is blocked by bug 258327
Vitor Roriz
Comment 5 2023-06-21 06:49:38 PDT
EWS
Comment 6 2023-06-27 16:19:12 PDT
Committed 265566@main (ab4981648cdb): <https://commits.webkit.org/265566@main> Reviewed commits have been landed. Closing PR #15141 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.